octosplay/api/api_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: octosplayapi
  namespace: api
  labels:
    octos-play: api
  annotations:
    app-version: aplikasi ini di build dengan image versi satu
spec:
  replicas: 3
  selector:
    matchLabels:
      octosplay-replica: api
  template:
    metadata:
      name: pod-api
      labels:
        octosplay-replica: api
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: octosplayapi
        image: registry.gitlab.com/octosplay/zukino:api-service3
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /api/ping
            port: 80
          initialDelaySeconds: 0
          periodSeconds: 10
          failureThreshold: 3
          successThreshold: 1
          timeoutSeconds: 1
