octosplay/api/octosplay_api_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache2api
  namespace: api
  labels:
    octos-play: apache2api
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    octosplay-replica: api
