octosplay/api/api_prod_deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: octosplayapi
  namespace: api
  labels:
    octos-play: api
  annotations:
    app-version: aplikasi ini di build dengan image versi satu
spec:
  replicas: 2
  selector:
    matchLabels:
      octosplay-replica: api
  template:
    metadata:
      name: pod-api
      labels:
        octosplay-replica: api
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: octosplayapi
        image: registry.gitlab.com/octosplay/api:1.0.1
        ports:
        - containerPort: 9000
        readinessProbe:
            exec:
                command:
                    - php-fpm-healthcheck
            initialDelaySeconds: 1
            periodSeconds: 5
        livenessProbe:
            exec:
                command:
                    - php-fpm-healthcheck
                    - --listen-queue=10
                    - --accepted-conn=5000
            initialDelaySeconds: 0
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: phpfpm-api
  namespace: api
  labels:
    octos-play: phpfpm-api
spec:
  ports:
  - port: 9000
    targetPort: 9000
  selector:
    octosplay-replica: api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "FCGI"
    nginx.ingress.kubernetes.io/fastcgi-index: "index.php"
    nginx.ingress.kubernetes.io/fastcgi-params-configmap: "serverconfig"
  name: api-ingress
  namespace: api
spec:
  rules:
  - host: api.octosplay.com
    http:
      paths:
      - backend:
          service:
            name: phpfpm-api
            port:
              number: 9000
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
