octosplay/api/octosplay_api_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: octosplay-api-ingress
  namespace: api
spec:
  rules:
    - host: api-staging.octosplay.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apache2api
                port:
                  number: 80
