octosplay/api/octosplay_api_ingress_tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: octosplay-api-ingress
  namespace: api
  annotations:
   kubernetes.io/ingress.class: nginx
   cert-manager.io/cluster-issuer: octosplay-api-issuer
spec:
  tls:
    - hosts:
      - api-staging.octosplay.com
      secretName: octosplay-screet
  rules:
    - host: api-staging.octosplay.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apache2api
                port:
                  number: 80
